[package]
name = "arknights_recrut_helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eframe = { version = "0.21.3", features = ["persistence"] }
eframe = { version = "0.21.3" }
image = { version = "0.24.3", features = ["png"] }
winapi = { version = "0.3.9", features = ["winuser", "winnt", "wingdi", "minwindef"] }
find-subimage = "0.1.12"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"


[build-dependencies]
winres = "0.1.12"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1